--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aniso8601==7.0.0
 asgiref==3.5.2
+certifi==2022.6.15
+cloudinary==1.29.0
 Django==4.0.5
 django-graphql-jwt==0.3.4
 graphene==2.1.9
@@ -14,3 +16,4 @@ singledispatch==3.7.0
 six==1.16.0
 sqlparse==0.4.2
 text-unidecode==1.3
+urllib3==1.26.9
