--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.5.2
 certifi==2022.6.15
 cloudinary==1.29.0
 Django==4.0.5
+django-cors-headers==3.13.0
 django-graphql-jwt==0.3.4
 graphene==2.1.9
 graphene-django==2.15.0
