--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,16 @@ certifi==2022.6.15
 cloudinary==1.29.0
 Django==4.0.5
 django-cors-headers==3.13.0
-django-graphql-jwt==0.3.4
+django-filter==22.1
+django-graphql-auth==0.3.16
+django-graphql-jwt==0.3.0
 graphene==2.1.9
 graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
 promise==2.3
 psycopg2==2.9.3
-PyJWT==2.4.0
+PyJWT==1.7.1
 Rx==1.6.1
 singledispatch==3.7.0
 six==1.16.0
